--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/ico" href="img/favicon.png">
     <title>Lavazza: Italy's favourite coffee</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -60,7 +60,7 @@
             </div>
             <div class="sub-headline__col">
                 <!-- GREETING BLOCK -->
-                <div class="greeting">Hello, happy Thursday!</div>
+                <div id="greeting"></div>
             </div>
         </div>
     </header>
@@ -190,8 +190,6 @@
                     <button class="blog__btn">Discover</button>
                 </p>
             </div>
-        </div>
-        <div class="blog__box">
             <div class="blog__card  blog__card--two">
                 <div class="blog__card-bg"></div>
                 <p class="blog__content">
@@ -210,8 +208,6 @@
                     <button class="blog__btn">find out more</button>
                 </p>
             </div>
-        </div>
-        <div class="blog__box">
             <div class="blog__card  blog__card--four">
                 <div class="blog__card-bg"></div>
                 <p class="blog__content">
@@ -222,6 +218,62 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer__box">
+            <div class="footer__social">
+                <ul class="footer__social-list">
+                    <li class="footer__social-item">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </li>
+                    <li class="footer__social-item">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-twitter"></use>
+                        </svg>
+                    </li>
+                    <li class="footer__social-item">
+                        <svg class="footer__icon footer__icon--youtube">
+                            <use xlink:href="img/sprite.svg#icon-youtube"></use>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+            <ul class="footer__sustain">
+                <p>Sustainability</p>
+                <li>Our Commitment</li>
+                <li>The Foundation</li>
+                <li>Sustainability Report</li>
+            </ul>
+            <ul class="footer__about">
+                <p>About Us</p>
+                <li>Work With Us</li>
+                <li>Become a supplier</li>
+                <li>Company</li>
+                <li>Training Center</li>
+                <li>Innovation Center</li>
+            </ul>
+            <ul class="footer__help">
+                <p>Help</p>
+                <li>Contacts</li>
+            </ul>
+            <ul class="footer__legal">
+                <p>Legal Notes</p>
+                <li>Term of use</li>
+                <li>Privacy Policy</li>
+                <li>Cookie Policy</li>
+                <li>Company Info</li>
+            </ul>
+        </div>
+        <div class="footer__box">
+            <a href="/" class="footer__logo-link">
+                <svg class="footer__logo-lavazza">
+                    <use xlink:href="img/sprite.svg#lavazza-logo"></use>
+                </svg>
+            </a>
+        </div>
+    </footer>
 
     <script src="js/app.js"></script>
 
